{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "af1f95ad-b528-45db-9a0b-a88089962f11",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "6db46fc3-9da6-4f60-8c1a-b761c04ef393",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "PassThrough",
                    "id": "9965a41a-eafa-4727-8f17-aebba1798a57",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "381493d1-bd4b-45a1-8dab-019906f926b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "798bccf3-95dc-48a2-8922-da6392517695",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HoldFire",
                    "type": "PassThrough",
                    "id": "6cf13128-c8c4-47d2-b3d7-38454ef5fbe2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ESC",
                    "type": "Button",
                    "id": "0a79e90f-e8e0-4787-be52-26a9c9cd273a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlot1",
                    "type": "Button",
                    "id": "0aba24cd-54f3-43b4-b22a-6d0f2d8ecb27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlot2",
                    "type": "Button",
                    "id": "50bddab6-a26c-425f-8ec1-5d97e8f4c562",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlot3",
                    "type": "Button",
                    "id": "b98a7b55-db42-4835-848e-6d5de5df677a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "0ab8973b-9411-4453-890b-dc4a9485842e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "a2203b14-5d40-4798-9749-446705301947",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2351b8f6-7b56-4ef4-98cd-f623735d8a99",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "45ff1d75-6761-4f20-8bcc-573dcd4ab504",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "012f27dd-a041-4122-85aa-5abe0f4d5df6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f22e6f3c-ed5c-4a62-a76e-6906c1622cee",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "16cbf121-ef65-4a2a-a357-53fff4690558",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cef6d34f-0f0b-4dd9-ae4f-cde8bfde6500",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c65285d4-dd6b-4fea-af85-c473fcb581db",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d1c84507-86f7-4094-bc7f-5a3ce137b263",
                    "path": "1DAxis(minValue=0)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldFire",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "88537f7f-fc2b-415e-870e-85c84327278c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldFire",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4604c41f-db5a-401f-b54c-423f72a836c5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ESC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea4717ae-e40c-446d-83fc-4a6c3e32bd9c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c1a2581-1c3f-4419-825b-cb6c16329452",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "633936f9-9146-4e81-9f04-ef5daeba445a",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45ec5ec1-b5ae-42f9-a142-386e111c86b6",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}